# Basic-Research-and-Education

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: main-checkpoint.py
configs/: config-lessnoise.yaml  config.yaml  evaluate.yaml
configs/.ipynb_checkpoints/: config-checkpoint.yaml  config-lessnoise-checkpoint.yaml
final/eval/: model-_metrics.json
src/dataset/: __init__.py  data.py
src/dataset/.ipynb_checkpoints/: __init__-checkpoint.py  data-checkpoint.py
src/evaluate/: evaluate.py
src/model/: __init__.py  vit.py
src/model/.ipynb_checkpoints/: vit-checkpoint.py
src/preprocess/: __init__.py  normalize.py
src/train/: train.py
src/train/.ipynb_checkpoints/: train-checkpoint.py
