[project]
name = "Basic-Template"
version = "0.1.0"
description = "A Template for Deep Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.9.3",
    "attrs==25.4.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "cfgrib==0.9.15.1",
    "cfgv==3.4.0",
    "cftime==1.6.5",
    "click==8.3.0",
    "cloudpickle==3.1.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "dask==2025.11.0",
    "distlib==0.4.0",
    "eccodes==2.44.0",
    "eccodeslib==2.44.0.5 ; sys_platform != 'win32'",
    "eckitlib==1.32.2.5 ; sys_platform != 'win32'",
    "einops==0.8.1",
    "fckitlib==0.14.0.5 ; sys_platform != 'win32'",
    "filelock==3.20.0",
    "findlibs==0.1.2",
    "fsspec==2025.10.0",
    "hydra-core==1.3.2",
    "identify==2.6.15",
    "importlib-metadata==8.7.0 ; python_full_version < '3.12'",
    "jinja2==3.1.6",
    "locket==1.0.0",
    "markupsafe==3.0.3",
    "matplotlib>=3.10.7",
    "mpmath==1.3.0",
    "netcdf4==1.7.3",
    "networkx==3.5",
    "nodeenv==1.9.1",
    "numpy==2.3.4",
    "nvidia-cublas-cu12==12.8.4.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.10.2.21 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.3.3.83 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufile-cu12==1.13.1.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.9.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.7.3.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.5.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.7.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.27.5 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvshmem-cu12==3.3.20 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "omegaconf==2.3.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "partd==1.4.2",
    "platformdirs==4.5.0",
    "pre-commit==4.3.0",
    "pycparser==2.23 ; implementation_name != 'PyPy'",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "ruff==0.14.3",
    "setuptools==80.9.0 ; python_full_version >= '3.12'",
    "six==1.17.0",
    "sympy==1.14.0",
    "toolz==1.1.0",
    "torch==2.9.0",
    "torchsummary==1.5.1",
    "tqdm==4.67.1",
    "triton==3.5.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "virtualenv==20.35.4",
    "xarray==2025.10.1",
    "zipp==3.23.0 ; python_full_version < '3.12'",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]


# Ruff Format Settings   ---- should be fixed with bluejun0901.
[tool.ruff]
# Exclude files
exclude = [
    ".venv",
    "data",
    "notebooks",
    "__pycache__"
]

line-length = 120      # Maximum chars in one line

# Ruff Linter
[tool.ruff.lint]
# Rules : 
# * E, W : Error, Warnings
# * F : Logical Error
# * I : Import Sort
select = ["E", "W", "F", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"**/**/__init__.py" = ["F401", "F403"]
